[gd_scene load_steps=37 format=3 uid="uid://c5won7nctd8y6"]

[ext_resource type="Texture2D" uid="uid://dgfe2a4ohwoxw" path="res://assets/players/Jump (32x32).png" id="1_gv3r6"]
[ext_resource type="Script" uid="uid://cjgx8fd4squy" path="res://scenes/game/player.gd" id="1_uu06s"]
[ext_resource type="Texture2D" uid="uid://c5152p7i1s7m" path="res://assets/players/Idle (32x32).png" id="2_duttb"]
[ext_resource type="Texture2D" uid="uid://xwyx73pv1t1v" path="res://assets/players/Fall (32x32).png" id="2_ek8yq"]
[ext_resource type="Texture2D" uid="uid://b53cqmi85e0h2" path="res://assets/players/Run (32x32).png" id="5_8psxn"]
[ext_resource type="AudioStream" uid="uid://qnja1oofjfn3" path="res://assets/sounds/Pisto Shooting.mp3" id="6_121pn"]
[ext_resource type="AudioStream" uid="uid://dljll8qcmfekj" path="res://assets/sounds/sfx_jump.mp3" id="7_rxiur"]
[ext_resource type="Texture2D" uid="uid://c3t06dbde7xwq" path="res://assets/weapons/ak47.png" id="8_m5ugi"]
[ext_resource type="AudioStream" uid="uid://dhwnkm1gdda6a" path="res://assets/sounds/DeathBell.mp3" id="9_bnwh7"]
[ext_resource type="AudioStream" uid="uid://b3f0k0kdgoeu8" path="res://assets/sounds/Respawn.mp3" id="10_dsw4c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uolrw"]
atlas = ExtResource("2_duttb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w44yp"]
atlas = ExtResource("2_duttb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_txjc5"]
atlas = ExtResource("2_duttb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xwxm"]
atlas = ExtResource("2_duttb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vmcc"]
atlas = ExtResource("2_duttb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q26w"]
atlas = ExtResource("2_duttb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucy1f"]
atlas = ExtResource("2_duttb")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8aqs"]
atlas = ExtResource("2_duttb")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yspgl"]
atlas = ExtResource("2_duttb")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xsoq"]
atlas = ExtResource("2_duttb")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p7xn"]
atlas = ExtResource("2_duttb")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8plh"]
atlas = ExtResource("5_8psxn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjmhb"]
atlas = ExtResource("5_8psxn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy6vo"]
atlas = ExtResource("5_8psxn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh05t"]
atlas = ExtResource("5_8psxn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75ejc"]
atlas = ExtResource("5_8psxn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17oqg"]
atlas = ExtResource("5_8psxn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mp62"]
atlas = ExtResource("5_8psxn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxyc7"]
atlas = ExtResource("5_8psxn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tsg8"]
atlas = ExtResource("5_8psxn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvjl2"]
atlas = ExtResource("5_8psxn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtp7i"]
atlas = ExtResource("5_8psxn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dih1y"]
atlas = ExtResource("5_8psxn")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ntfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ek8yq")
}],
"loop": false,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uolrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w44yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txjc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xwxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vmcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q26w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucy1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8aqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yspgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xsoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p7xn")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_gv3r6")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8plh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjmhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy6vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh05t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75ejc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17oqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mp62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxyc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tsg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvjl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtp7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dih1y")
}],
"loop": true,
"name": &"running",
"speed": 22.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qeq4o"]
radius = 18.0
height = 50.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ppb0c"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("GunContainer:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("GunContainer/GunSprite:flip_v")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_uu06s")

[node name="NameLabel" type="Label" parent="."]
offset_left = 207.0
offset_top = 138.0
offset_right = 247.0
offset_bottom = 161.0

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(231, 195)
scale = Vector2(1.75, 2.09375)
sprite_frames = SubResource("SpriteFrames_0ntfe")
animation = &"running"
frame_progress = 0.446671
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(230, 198)
shape = SubResource("CapsuleShape2D_qeq4o")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ppb0c")

[node name="GunContainer" type="Node2D" parent="."]
position = Vector2(230, 196)

[node name="GunSprite" type="Sprite2D" parent="GunContainer"]
position = Vector2(39, 1)
scale = Vector2(0.0546875, 0.0671875)
texture = ExtResource("8_m5ugi")

[node name="Muzzle" type="Marker2D" parent="GunContainer/GunSprite"]
position = Vector2(256, -44.6512)

[node name="sfx_run" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_121pn")
volume_db = 0.12
pitch_scale = 5.91
autoplay = true

[node name="sfx_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_rxiur")

[node name="sfx_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_bnwh7")

[node name="sfx_respawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_dsw4c")

[node name="sfx_shoot1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_121pn")
